--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 			</div>
 		</div><!--header f-->
 		
-		<div class="video"><!--video s-->
+<!-- 		<div class="video"><!--video s-->
 		<video src="video/header.mp4" type="video/mp4"  autoplay loop muted></video>
-		</div><!--video f-->
+		</div><!--video f--> -->
 		
 		
 		<div id="contents1"><!--contents1 s-->
