--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>BLEND</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=1400"> 
+		<meta name="viewport"> 
 		
 		<link href="css/index.css" rel="stylesheet" type="text/css">
 		<link href="images/pabicon.png" rel="icon" type="image/png" sizes="32x32" >
