fix: 스타일 적용 에러 코드정리

--- a/sub3_onlyblend/blend.html
+++ b/sub3_onlyblend/blend.html
@@ -53,7 +53,7 @@
 			</ul>
 			</div>
 		</div><!--header f-->
-		<div id="banner1"><a href="#"><img src="../images/blend_banner.png"></a></div>
+		<div id="banner1"><img src="../images/blend_banner.png"></div>
 		<div id="best">
 			<h1>Only Blend</h1>
 			
